--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -42,3 +42,16 @@
 
         .icon-button__icon
             fill: mainColor
+
+    &__subsection
+        display: flex
+        width: 100%
+
+    &__col
+        width: 50%
+
+        &:first-child
+            margin-right: 25px
+
+        &:last-child
+            margin-left: 25px
