--- a/markup/components/grid/grid.styl
+++ b/markup/components/grid/grid.styl
@@ -25,6 +25,14 @@ grid-modifiers = ( one two three four five six seven eight nine ten elevel twelv
         margin 0
         vertical-align top
 
+        &_space_between
+            display: flex
+            justify-content: space-between
+
+        &_align_center
+            display: flex
+            align-items: center
+
         &_align_right
             text-align: right
 
