--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -55,3 +55,18 @@
 
         &:last-child
             margin-left: 25px
+
+    &__other-textarea
+        margin-top: 20px
+        margin-left: 40px
+
+    &__label
+        color darkGreyColor
+        font-family fontMain
+        font-size 16px
+        font-weight 400
+
+        &_flex_end
+            display: flex
+            align-items: flex-end
+            height: 100%
