--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -76,6 +76,9 @@
                 &__item_credits
                     min-width: initial
 
+                    .navbar__dropdown .navbar__heading
+                        display: block
+
                     .navbar__heading
                         display: none
 
