--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -11,9 +11,6 @@ photoTapeItemWidthMobile = 60px
     &__items
         display: flex
 
-        &:hover ^[0]__photo
-            opacity: .3
-
     &__item
         width: photoTapeItemWidth
         height: photoTapeItemWidth
@@ -23,12 +20,6 @@ photoTapeItemWidthMobile = 60px
             width: photoTapeItemWidthMobile
             height: photoTapeItemWidthMobile
 
-        &:hover
-            & > ^[0]__popup
-                display: block
-
-            & ^[0]__photo
-                opacity: 1
 
     &__link
         position: relative
@@ -91,3 +82,6 @@ photoTapeItemWidthMobile = 60px
 
         +below(768px)
             display: none
+
+    .model-info-popup
+        display: none
