--- a/markup/pages/user-fill-profile2.pug
+++ b/markup/pages/user-fill-profile2.pug
@@ -11,7 +11,8 @@ block header
     +header
 
 block content
-    +user-fill-profile2
+    +user-fill-profile(2)
+        +user-fill-profile-2
     +arrow-up
 
 block popups
