--- a/markup/pages/user-fill-profile3.pug
+++ b/markup/pages/user-fill-profile3.pug
@@ -11,7 +11,8 @@ block header
     +header
 
 block content
-    +user-fill-profile3
+    +user-fill-profile(3)
+        +user-fill-profile-3
     +arrow-up
 
 block popups
