--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -70,3 +70,13 @@
             display: flex
             align-items: flex-end
             height: 100%
+
+    &__column
+        display: flex
+        align-items: center
+
+        &_half
+            width: 50%
+
+        & ^[0]__label
+            margin-right: 12px
