--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -47,6 +47,11 @@
         display: flex
         width: 100%
 
+        &_visual
+            justify-content: space-between
+            border: 1px solid borderColor
+            padding: 20px
+
     &__col
         width: 50%
 
