--- a/markup/pages/user-fill-profile.pug
+++ b/markup/pages/user-fill-profile.pug
@@ -6,6 +6,7 @@ include ../components/arrow-up/arrow-up
 include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
 include ../components/select-city-popup/select-city-popup
+include ../components/map/map
 
 block header
     +header
@@ -25,6 +26,7 @@ block scripts
     script(src='%=static=%js/separate-js/ajax/fill-profile/step1.js')
     script(src='%=static=%js/separate-js/ajax/fill-profile/step2.js')
     script(src='%=static=%js/separate-js/ajax/fill-profile/step3.js')
+    script(src='%=static=%js/separate-js/ajax/fill-profile/step4.js')
 
 block footer
     +footer
