--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -85,3 +85,8 @@
 
         & ^[0]__label
             margin-right: 12px
+
+    .map
+        margin-top: 16px
+        width: 100%
+        height: 374px
