--- a/markup/components/vip/vip.styl
+++ b/markup/components/vip/vip.styl
@@ -5,8 +5,12 @@
     min-height 400px
     background-color darkGreyColor
 
-    &_masonry:not(:last-child)
-        margin-bottom: grid-gap;
+    &_masonry
+        margin-left: auto
+        margin-right: auto
+
+        &:not(:last-child)
+            margin-bottom: grid-gap;
 
     &__content
         padding: 40px
