--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -71,6 +71,11 @@
         font-size 16px
         font-weight 400
 
+        &_control-like
+            display: flex
+            align-items: center
+            height: 60px
+
         &_flex_end
             display: flex
             align-items: flex-end
