about me profile

--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -367,3 +367,18 @@ mixin user-fill-profile-5
                     +button('button')._uppercase._bg_darkGrey._color_main.user-fill-profile__action Save & Exit
                 +col(4)
                     +button('button')._uppercase._bg_main._color_white.user-fill-profile__action.js-user-fill-profile-continue continue
+
+//- About me
+mixin user-fill-profile-6
+    form(action='#' method='post').user-fill-profile__main
+        .user-fill-profile__section.user-fill-profile__section_column
+            +heading._md About me
+            +grid
+                +col(12)
+                    +textarea Mon nom est Megan, cultivée, je suis la plus belle compagne aventureuse pour n’importe quelle occasion. im the perfect woman that can give you the satisfaction, if you need relax and massage, call me, im real naughty, clean and safety so my picture is recent and 100% real, i propose Full package series kiseessss call me baby
+
+            +grid.grid_push_bottom
+                +col(4).grid__col_push_bottom
+                    +button('button')._uppercase._bg_darkGrey._color_main.user-fill-profile__action Save & Exit
+                +col(4).grid__col_push_bottom
+                    +button('button')._uppercase._bg_main._color_white.user-fill-profile__action.js-user-fill-profile-continue continue
