--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -27,6 +27,11 @@
         margin-top: 16px
 
     &__section
+        height: 100%
+
+        &_column
+            display: flex
+            flex-direction: column
 
         & > .heading
             margin-bottom: 11px
