--- a/markup/components/grid/grid.styl
+++ b/markup/components/grid/grid.styl
@@ -9,6 +9,9 @@ grid-modifiers = ( one two three four five six seven eight nine ten elevel twelv
     margin-left -(grid-gap / 2)
     margin-right -(grid-gap / 2)
 
+    &_push_bottom
+        margin-top: auto
+
     &_items_center
         align-items: center
 
