--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -13,6 +13,7 @@ include ../icon-button/icon-button
 include ../textarea/textarea
 include ../accordion/accordion
 include ../map/map
+include ../add-input/add-input
 
 mixin user-fill-profile(activeItem)
     +b.user-fill-profile&attributes(attributes)
@@ -378,6 +379,154 @@ mixin user-fill-profile-6
                     +textarea Mon nom est Megan, cultivée, je suis la plus belle compagne aventureuse pour n’importe quelle occasion. im the perfect woman that can give you the satisfaction, if you need relax and massage, call me, im real naughty, clean and safety so my picture is recent and 100% real, i propose Full package series kiseessss call me baby
 
             +grid.grid_push_bottom
+                +col(4).grid__col_push_bottom
+                    +button('button')._uppercase._bg_darkGrey._color_main.user-fill-profile__action Save & Exit
+                +col(4).grid__col_push_bottom
+                    +button('button')._uppercase._bg_main._color_white.user-fill-profile__action.js-user-fill-profile-continue continue
+
+//- Service
+mixin user-fill-profile-7
+    form(action='#' method='post').user-fill-profile__main
+        .user-fill-profile__section
+            +heading._md Service
+            +grid
+                +col(4)
+                    +field
+                        +field-label Category Service
+                        +selectbox('Independent')
+                +col(4)
+                    +field
+                        +field-label Currency
+                        +selectbox('Dol $')
+
+        .user-fill-profile__section
+            +heading._md Sex
+            +grid
+                +col(4).grid__col_align_center.grid__col_space_between
+                    +checkbox(true, 'sex', 0) Classical Sex
+                    +add-input('classical-sex-value', '100 $')
+                +col(4)
+                    +checkbox(false, 'sex', 1) Sex
+                +col(4)
+                    +checkbox(false, 'sex', 2) Deep throating
+
+                +col(4).grid__col_align_center.grid__col_space_between
+                    +checkbox(true, 'sex', 3) Anal sex
+                    +add-input('sex-value', '2500 $')
+                +col(4)
+                    +checkbox(false, 'sex', 4) BJ with condom
+                +col(4)
+                    +checkbox(false, 'sex', 5) BJ in your car
+
+                +col(4)
+                    +checkbox(true, 'sex', 6) Lesbian sex
+                +col(4)
+                    +checkbox(false, 'sex', 7) Cunnilingus
+                +col(4)
+                    +checkbox(false, 'sex', 8) Sex toys
+
+                +col(4).grid__col_align_center.grid__col_space_between
+                    +checkbox(true, 'sex', 9) Couples
+                    +add-input('classical-sex-value', '0 $')
+                +col(4)
+                    +checkbox(false, 'sex', 10) BJ without condom
+                +col(4)
+                    +checkbox(false, 'sex', 11) Cum on breast
+
+                +col(4)
+                    +checkbox(true, 'sex', 12) Cum on face
+                +col(4)
+                    +checkbox(false, 'sex', 13) Cum in mouth
+                +col(4)
+                    +checkbox(true, 'sex', 14) Classical sex
+
+        .user-fill-profile__section
+                +heading._md Massage
+                +grid
+                    +col(4)
+                        +checkbox(true, 'massage', 1) Classic
+                    +col(4)
+                        +checkbox(false, 'massage', 2) Relaxing
+                    +col(4)
+                        +checkbox(true, 'massage', 3) Urological
+
+                    +col(4)
+                        +checkbox(true, 'massage', 4) Professional
+                    +col(4)
+                        +checkbox(false, 'massage', 5) Thai
+                    +col(4)
+                        +checkbox(false, 'massage', 6) Specific area
+
+                    +col(4)
+                        +checkbox(true, 'massage', 7) Erotic
+                    +col(4)
+                        +checkbox(true, 'massage', 8) Sakura
+
+        .user-fill-profile__section
+                +heading._md Striptease
+                +grid
+                    +col(4)
+                        +checkbox(true, 'striptease', 1) Professional
+                    +col(4)
+                        +checkbox(true, 'striptease', 2) Amateur
+                    +col(4)
+                        +checkbox(true, 'striptease', 3) Hardcore Lesbi-show
+
+                    +col(4)
+                        +checkbox(true, 'striptease', 4) Soft Lesbi-show
+
+        .user-fill-profile__section
+                +heading._md BDSM
+                +grid
+                    +col(4)
+                        +checkbox(false, 'striptease', 1) Bandage
+                    +col(4)
+                        +checkbox(true, 'striptease', 2) Games
+                    +col(4)
+                        +checkbox(true, 'striptease', 3) Getting Whipped
+
+                    +col(4)
+                        +checkbox(false, 'striptease', 4) Mistress
+                    +col(4)
+                        +checkbox(true, 'striptease', 5) Softcore domination
+                    +col(4)
+                        +checkbox(false, 'striptease', 6) Slave
+
+                    +col(4)
+                        +checkbox(true, 'striptease', 7) Fetish
+                    +col(4)
+                        +checkbox(false, 'striptease', 8) Trampling
+
+        .user-fill-profile__section
+                +heading._md Extreme
+                +grid
+                    +col(4)
+                        +checkbox(false, 'extreme', 1) Strapon
+                    +col(4)
+                        +checkbox(false, 'extreme', 2) Golden rain, give
+                    +col(4)
+                        +checkbox(true, 'extreme', 3) Copro
+
+                    +col(4)
+                        +checkbox(true, 'extreme', 4) Anilingus
+                    +col(4)
+                        +checkbox(true, 'extreme', 5) Golden rain, receive
+                    +col(4)
+                        +checkbox(true, 'extreme', 6) Anal fisting
+
+                    +col(4)
+                        +checkbox(false, 'extreme', 7) Fisting
+
+        .user-fill-profile__section
+                +heading._md Other
+                +grid
+                    +col(4)
+                        +checkbox(false, 'extreme', 1) Role play
+                    +col(4)
+                        +checkbox(false, 'extreme', 2) Photo/Video
+                    +col(4)
+                        +checkbox(true, 'extreme', 3) Escort
+
                 +col(4).grid__col_push_bottom
                     +button('button')._uppercase._bg_darkGrey._color_main.user-fill-profile__action Save & Exit
                 +col(4).grid__col_push_bottom
