--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -100,3 +100,9 @@
         margin-top: 16px
         width: 100%
         height: 374px
+
+    &__add-upcoming-tour
+
+        .accordion__button
+            padding-left: 30px
+            padding-right: 30px
