--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -71,10 +71,15 @@
         margin-left: 40px
 
     &__label
+        display: block
         color darkGreyColor
         font-family fontMain
         font-size 16px
         font-weight 400
+
+        & + ^[0]__label
+            color: rgba(darkGreyColor, .59)
+            margin-top: 6px
 
         &_control-like
             display: flex
@@ -101,8 +106,7 @@
         width: 100%
         height: 374px
 
-    &__add-upcoming-tour
-
+    .accordion_dark
         .accordion__button
             padding-left: 30px
             padding-right: 30px
