--- a/markup/components/fill-profile-nav/fill-profile-nav.styl
+++ b/markup/components/fill-profile-nav/fill-profile-nav.styl
@@ -14,6 +14,7 @@
             & ^[0]__link
                 color: mainColor
                 border-color: mainColor
+                background-color: #fff
 
         &.completed
             & ^[0]__icon
