--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -53,6 +53,7 @@ block content
             +demo-link('user-fill-profile7.html') 06/Reg_p2_7 (static)
             +demo-link('user-fill-profile8.html') 06/Reg_p2_8 (static)
             +demo-link('user-fill-profile9.html') 06/Reg_p2_10 (static)
+            +demo-link('boost-account.html') 08/Boost my account/main page
     +arrow-up
 
 block popups
